--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -461,6 +461,25 @@ label{
   }
 }
 
+#ide_windows.fullscreen{
+  z-index: 9000;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-image: url("main-bg.jpg");
+  #assets_menu{
+    width: 20%;
+    height: 100%;
+    overflow-y: auto;
+  }
+  #assets_ide{
+    background-color: #f8f8f8;
+    height: 100%;
+    width: 80%;
+  }
+}
 #assets_menu{
   float: left;
   width: 25%;
@@ -469,7 +488,6 @@ label{
   border-radius: 5px 0 0 5px;
   box-shadow: -2px 0px 2px rgba(133, 133, 133, 0.80);
   background-color: #f4f4f4;
-  min-height: 100%;
   .button{
     margin: 5px;
     display: block;
@@ -541,6 +559,10 @@ label{
     #full_screen_icon{
       background-image: url("icons/arrow_out.png");
       background-size: 85%;
+      &.fullscreen{
+        background-image: url("icons/arrow_in.png") !important;
+        background-size: 90%;
+      }
     }
     #help_window_icon{
       background-image: url("icons/question-white.png");
