--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -483,7 +483,6 @@ label{
 #assets_menu{
   float: left;
   width: 25%;
-  padding: 1px 0 10px;
   border-right: 1px solid #b5b5b5;
   border-radius: 5px 0 0 5px;
   box-shadow: -2px 0px 2px rgba(133, 133, 133, 0.80);
@@ -527,6 +526,10 @@ label{
         color: #468c46;
       }
     }
+  }
+  #new_assets_window{
+    font-size: 0.8em;
+    padding: 3px;
   }
 }
 #assets_ide{
