--- a/app/views/admin/assets/create.js.erb
+++ b/app/views/admin/assets/create.js.erb
@@ -1,18 +1,31 @@
 <%= remotipart_response do %>
-  j("#images").append(
-    '<% @new_images.each do |image| %>' +
-      '<div class="asset_item">' +
-        '<%= image.file_file_name %>' +
-        '<%= link_to image_tag("icons/delete.png"), admin_store_asset_path(@store, image), :method => :delete, :confirm => "Are You sure?", :class => "link-icon"%>' +
-      '</div>' +
-    '<% end if @new_images%>');
-  j("#stylesheets").append(
-    '<% @new_stylesheets.each do |stylesheet| %>' +
-      '<%= link_to_function stylesheet.file_file_name, "loadAsset(#{@store.id}, #{stylesheet.id})", :class => "asset_item", :id => "asset_#{stylesheet.id}" %>' +
-    '<% end if @new_stylesheets%>');
-  j("#javascripts").append(
-    '<% @new_javascripts.each do |javascript| %>' +
-      '<%= link_to_function javascript.file_file_name, "loadAsset(#{@store.id}, #{javascript.id})", :class => "asset_item", :id => "asset_#{javascript.id}" %>' +
-    '<% end if @new_javascripts%>');
+  <% if @new_images.length != 0%>
+    j("#images .asset_items").append(
+      '<% @new_images.each do |image| %>' +
+        '<div class="asset_item just_now_added_asset">' +
+          '<%= image.file_file_name %>' +
+        '</div>' +
+      '<% end%>');
+    j("#images .asset_items").show();
+    j("#images .no_assets").remove();
+  <% end %>
+  <% if @new_stylesheets.length != 0%>
+    j("#stylesheets .asset_items").append(
+      '<% @new_stylesheets.each do |stylesheet| %>' +
+        '<%= link_to_function stylesheet.file_file_name, "loadAsset(#{@store.id}, #{stylesheet.id})", :class => "asset_item just_now_added_asset", :id => "asset_#{stylesheet.id}" %>' +
+      '<% end%>');
+    j("#stylesheets .asset_items").show();
+    j("#stylesheets .no_assets").remove();
+  <% end %>
+  <% if @new_javascripts.length != 0%>
+    j("#javascripts .asset_items").append(
+      '<% @new_javascripts.each do |javascript| %>' +
+        '<%= link_to_function javascript.file_file_name, "loadAsset(#{@store.id}, #{javascript.id})", :class => "asset_item just_now_added_asset", :id => "asset_#{javascript.id}" %>' +
+      '<% end%>');
+    j("#javascripts .asset_items").show();
+    j("#javascripts .no_assets").remove();
+  <% end %>
   j("form #asset_file").val("");
+  j("form#new_asset input[type=submit]").hide();
+  markerNewAsset();
 <% end %>
