Some styling menu for creating new assets. Move css for assets to different folder.

--- a/app/views/admin/assets/create.js.erb
+++ b/app/views/admin/assets/create.js.erb
@@ -26,6 +26,7 @@
     j("#javascripts .no_assets").remove();
   <% end %>
   j("form #asset_file").val("");
+  j("#uploaded_assets_list").html("");
   j("form#new_asset input[type=submit]").hide();
   markerNewAsset();
 <% end %>
