Implementing to create asset in editor (not upload!)

--- a/app/views/admin/assets/create.js.erb
+++ b/app/views/admin/assets/create.js.erb
@@ -27,6 +27,6 @@
   <% end %>
   j("form #asset_file").val("");
   j("#uploaded_assets_list").html("");
-  j("form#new_asset input[type=submit]").hide();
+  j("form#new_asset input[name=upload]").hide();
   markerNewAsset();
 <% end %>
